--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    background: #cf9ec2;
-    color: #daf37f;
+    background: #f4f4f9;
+    color: #2c3e50;
     line-height: 1.8;
 }
 
